deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pearl-api
spec:
  type: ClusterIP
  selector:
    app: pearl-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
